--- a/tools/gui/control.glade
+++ b/tools/gui/control.glade
@@ -200,6 +200,7 @@
                     <child>
                       <object class="GtkHBox" id="histogram-box">
                         <property name="visible">True</property>
+                        <property name="border_width">10</property>
                         <child>
                           <placeholder/>
                         </child>
@@ -310,11 +311,70 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkHScale" id="hscale1">
+                      <object class="GtkTable" id="table2">
                         <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="adjustment">frames-adjustment</property>
-                        <property name="digits">0</property>
+                        <property name="border_width">10</property>
+                        <property name="n_rows">2</property>
+                        <property name="n_columns">2</property>
+                        <property name="column_spacing">6</property>
+                        <property name="row_spacing">6</property>
+                        <child>
+                          <object class="GtkHScale" id="hscale1">
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="adjustment">frames-adjustment</property>
+                            <property name="digits">0</property>
+                          </object>
+                          <packing>
+                            <property name="left_attach">1</property>
+                            <property name="right_attach">2</property>
+                            <property name="top_attach">1</property>
+                            <property name="bottom_attach">2</property>
+                            <property name="y_options">GTK_FILL</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkLabel" id="label5">
+                            <property name="visible">True</property>
+                            <property name="xalign">1</property>
+                            <property name="label" translatable="yes">Frame:</property>
+                          </object>
+                          <packing>
+                            <property name="top_attach">1</property>
+                            <property name="bottom_attach">2</property>
+                            <property name="x_options">GTK_FILL</property>
+                            <property name="y_options"></property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkLabel" id="label6">
+                            <property name="visible">True</property>
+                            <property name="xalign">1</property>
+                            <property name="label" translatable="yes">Zoom:</property>
+                          </object>
+                          <packing>
+                            <property name="x_options">GTK_FILL</property>
+                            <property name="y_options"></property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkComboBox" id="zoom-box">
+                            <property name="visible">True</property>
+                            <property name="model">zoom-values</property>
+                            <child>
+                              <object class="GtkCellRendererText" id="cellrenderertext2"/>
+                              <attributes>
+                                <attribute name="text">0</attribute>
+                              </attributes>
+                            </child>
+                          </object>
+                          <packing>
+                            <property name="left_attach">1</property>
+                            <property name="right_attach">2</property>
+                            <property name="x_options">GTK_FILL</property>
+                            <property name="y_options">GTK_FILL</property>
+                          </packing>
+                        </child>
                       </object>
                       <packing>
                         <property name="position">1</property>
@@ -364,6 +424,28 @@
         </child>
       </object>
     </child>
+  </object>
+  <object class="GtkListStore" id="zoom-values">
+    <columns>
+      <!-- column-name display -->
+      <column type="gchararray"/>
+      <!-- column-name factor -->
+      <column type="gdouble"/>
+    </columns>
+    <data>
+      <row>
+        <col id="0" translatable="yes">100 %</col>
+        <col id="1">1</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">50 %</col>
+        <col id="1">0.5</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">25 %</col>
+        <col id="1">0.25</col>
+      </row>
+    </data>
   </object>
   <object class="GtkWindow" id="choice-window">
     <property name="border_width">6</property>
